--- a/autopilot/dms-pi.conf
+++ b/autopilot/dms-pi.conf
@@ -1,6 +1,6 @@
 # Zentrale Konfiguration für DMS-PI
 
-# Storage Vorbereitung
+## Storage Vorbereitung
 
 STORAGE_PREP_MOUNT_POINT="/mnt/hat"
 STORAGE_PREP_DEVICE="/dev/nvme0n1"
