--- a/autopilot/dms-pi.conf
+++ b/autopilot/dms-pi.conf
@@ -8,12 +8,9 @@ STORAGE_PREP_PARTITION="${STORAGE_PREP_DEVICE}p1"
 
 ## K3s Vorbereitung
 
-### Zielpfad der cgroup-Konfiguration
+### cgroup-Anpassungen
 
 K3S_PREP_TARGET_CGROUPS="/boot/firmware/cmdline.txt"
-
-### Parameter für cgroups
-
 K3S_PREP_CGROUP_MEMORY="cgroup_memory=1"
 K3S_PREP_CGROUP_ENABLE="cgroup_enable=memory"
 
