Cloudflare DNS Updater, cert-manager deployment & external-dns playground

--- a/paperless-ngx-k3s/services/paperless-ngx-webserver-service.yaml
+++ b/paperless-ngx-k3s/services/paperless-ngx-webserver-service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paperless-ngx-webserver
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "paperless-ngx.example"
 spec:
   ports:
     - port: 80
