--- a/paperless-ngx-k3s/ingress/paperless-ngx-ingress-tls.yaml
+++ b/paperless-ngx-k3s/ingress/paperless-ngx-ingress-tls.yaml
@@ -3,8 +3,14 @@ kind: Ingress
 metadata:
   name: paperless-ngx-ingress
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
+  ingressClassName: traefik
+  tls:
+  - hosts:
+    - paperless-ngx.example
+    secretName: paperless-ngx-example-tls
   rules:
   - host: paperless-ngx.example
     http:
